[package]
name = "lock-free"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-epoch = "0.9"
crossbeam-utils = "0.8"
rand = { version = "0.8.4", features = ["small_rng"] }
jemallocator = "0.3.2"
tcmalloc = { version = "0.3.0", features = ["bundled"] }
seahash = "4.1.0"
pprof = { version = "0.6.1", features = ["flamegraph"] }