[package]
name = "lock-free"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-epoch = "0.9"
crossbeam-utils = "0.8"
rand = { version = "0.8", features = ["small_rng"] }
jemallocator = "0.3"
tcmalloc = { version = "0.3", features = ["bundled"] }
seahash = "4.1"
pprof = { version = "0.6", features = ["flamegraph"] }
snmalloc-rs = { version = "0.2", features = ["1mib", "native-cpu", "usecxx20"] }